Login with error
Login with error that when the user is logged in and tries to go to homepages it gives an error

--- a/LibriVox/HomePage.storyboard
+++ b/LibriVox/HomePage.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Pkn-Ml-aoC">
     <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -359,10 +359,10 @@
             </objects>
             <point key="canvasLocation" x="1752.8" y="0.0"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--HomepageTBC-->
         <scene sceneID="bAN-FB-Ewr">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Pkn-Ml-aoC" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Pkn-Ml-aoC" customClass="HomepageTBC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O1C-Mo-Ign">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
