Login bug fixed and Register Details
Login fixed thanks to @lgleto ❤️ & register details first drafts

--- a/LibriVox/HomePage.storyboard
+++ b/LibriVox/HomePage.storyboard
@@ -362,7 +362,7 @@
         <!--HomepageTBC-->
         <scene sceneID="bAN-FB-Ewr">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Pkn-Ml-aoC" customClass="HomepageTBC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="HomepageTBC" automaticallyAdjustsScrollViewInsets="NO" id="Pkn-Ml-aoC" customClass="HomepageTBC" customModule="LibriVox" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="O1C-Mo-Ign">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
